<resources>
    <string name="app_name">Covid-19 Heat Map</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_heatmap">HeatmapActivity</string>
    <string name="google_maps_api_key">AIzaSyA4VQqBlMSZ062sMY0jwSHAu62B1kC-0fc</string>
    <string name="submit">SUBMIT</string>
    <string name="pick_location">PICK LOCATION</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="name">Name</string>
    <string name="location_name">Location Name</string>
    <string name="textview">TextView</string>
    <string name="warningName">Name must be 3–60 characters long.</string>
    <string name="warningLatitude">Latitude must be from [-90, 90] range</string>
    <string name="warningLongitude">Longitude must be from [-180, 180] range</string>
    <string name="show_map">Show Map</string>
    <string name="add_location">Add Location</string>
    <string name="help_text">Map - Opens a map with points showing places where there is a risk of infection with the Covid-19.\n\nAdd Location - Provide longitude, latitude and name of the location you want to add to the map. You can also pick location from a map using \'Pick Location\' button or choose your current location wit \'Current Location\' button.\n\nMy locations - Displays a list of locations added by you. Click on the trash bin to delete the point from the map.\n\nHelp - Displays this page.\n\nDelete points - Button available only for admins. When pressed all points older than 14 days are deleted from the map.\n\nLog out - Logs you out.
    </string>
    <string name="help">Help</string>
    <string name="warningEmpty">Fill all the required fields</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="change_location">Change Location</string>
    <string name="confirm">Confirm</string>
    <string name="view_my_locations">View my locations</string>
    <string name="go_back">Go Back</string>
    <string name="delete">DELETE</string>
    <string name="log_out">LOG OUT</string>
    <string name="show_heatmap">SHOW HEATMAP</string>
    <string name="show_users_heatmap">SHOW USERS\' HEATMAP</string>
    <string name="delete_outdated">DELETE OUTDATED</string>
    <string name="main_menu_logo">Main menu logo</string>
    <string name="show_my_locations">SHOW MY LOCATIONS</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="map">Map</string>
    <string name="my_locations">My locations</string>
    <string name="map_image">Map Image</string>
    <string name="add_location_image">Add Location Image</string>
    <string name="my_locations_image">My Locations Image</string>
    <string name="help_image">Help Image</string>
</resources>