<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242525"
    tools:context=".addLocation.AddLocationActivity">

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_logout"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickName" />

    <EditText
        android:id="@+id/pickName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/location_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#dbdbdb"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <Button
        android:id="@+id/pickLocationBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/rounded_button"
        android:text="@string/pick_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/currentLocationBtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:text="add current location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickLocationBtn" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/longitude"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/latitudeTextView"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/latitude"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pickLongitude"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/longitude"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#dbdbdb"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pickLatitude"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitudeTextView" />

    <EditText
        android:id="@+id/pickLatitude"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        android:hint="@string/latitude"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColor="#FFFFFF"
        android:textColorHint="#dbdbdb"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pickLongitude"
        app:layout_constraintTop_toBottomOf="@+id/latitudeTextView" />

    <TextView
        android:id="@+id/warningTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textview"
        android:textColor="#FFFFFF"
        android:textColorHint="#595959"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn"
        app:layout_constraintVertical_bias="0.085" />

</androidx.constraintlayout.widget.ConstraintLayout>